--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <html>
 <head>
 <title>BottleSlider Demo</title>
-<link rel="stylesheet" type="text/css" href="bottle.min.css">
+<link rel="stylesheet" type="text/css" href="lib/bottle.min.css">
 <link rel="stylesheet" type="text/css" href="bottleslider.css">
-<script src="jquery-2.1.3.min.js"  type="text/javascript" ></script>
+<script src="lib/jquery-2.1.3.min.js"  type="text/javascript" ></script>
 <script type="text/javascript" src="bottleslider.js"></script>
 <style>
 .wrap{ padding:30px; }
