added download link

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ $(function(){
 </div>
 <div class="wrap">
 	<h1>Jquery Image Slider Demo</h1>
-	<p>Image slider on the homepage is a common functionality in most of the web templates... This is a demo for the tutorial on implementing jquery image slider using jquery and html from scratch </p>
+	<p>Image slider on the homepage is a common functionality in most of the web templates... This is a demo for the tutorial on implementing jquery image slider using jquery and html from scratch. Download the plugin from <b><a href="https://github.com/packetcode/bottleslider">github</a></b> </p>
 <hr>
  a <span class="bg-dp-lt-yellow capsule" ><b><a href="http://packetcode.com">packetcode</a></b></span> production
 </div>
